--- a/docs/.vuepress/override.styl
+++ b/docs/.vuepress/override.styl
@@ -1,5 +1,5 @@
-.getting-started .outbound{
-    display: none;
+.getting-started .outbound,.nav-links .outbound{
+  display: none;
 }
 
 .getting-started a img{
@@ -14,10 +14,9 @@ p code{
   // padding: 0.25rem 0.4rem!important;
 }
 
-
 blockquote {
-    font-size: 15px!important;
-    color: #858585!important;
-    border-left: 0.25rem solid #42b983!important;
-    font-weight: 1000!important;
+  font-size: 15px!important;
+  color: #858585!important;
+  border-left: 0.25rem solid #42b983!important;
+  font-weight: 1000!important;
 }
