--- a/docs/.vuepress/style.styl
+++ b/docs/.vuepress/style.styl
@@ -1,9 +1,9 @@
 .getting-started .outbound,.nav-links .outbound{
-  display: none;
+  display: none!important;
 }
 
 .getting-started a img{
-  margin-right:8px;
+  margin-right:8px!important;
 }
 
 //global
